[gd_scene load_steps=4 format=3 uid="uid://bjutobqxcd8ce"]

[ext_resource type="Texture2D" uid="uid://c5mbas3h6a8al" path="res://Sprites/Testing/test_portrait.png" id="1_eqdss"]
[ext_resource type="Script" path="res://Scenes/UI/In game ui/unit_inspector.gd" id="1_fp2rx"]
[ext_resource type="Theme" uid="uid://b4s5t4nx4dp4m" path="res://Sprites/UI/Themes/InGameUI/In-game-UI.tres" id="2_aaeym"]

[node name="unit_inspector" type="PanelContainer"]
offset_right = 646.0
offset_bottom = 233.0
script = ExtResource("1_fp2rx")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_right = 15

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
texture = ExtResource("1_eqdss")
expand_mode = 2
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="NameLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Test_Name"

[node name="WeaponLbl" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Test_Weapon"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="HitpointsLbl" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.25
text = "50/50"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Fill" type="Control" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HitpointsBar" type="ProgressBar" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("2_aaeym")
value = 100.0
show_percentage = false

[node name="Fill2" type="Control" parent="MarginContainer/VBoxContainer/MarginContainer/HBoxContainer2/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
